// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regana #analyse analyse should throw error with invalid input 1`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should throw error with invalid input 2`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should throw error with invalid input 3`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should throw error with invalid input 4`] = `"ENOENT: no such file or directory, stat ''"`;

exports[`regana #analyse analyse should throw error with invalid input 5`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should throw error with invalid input 6`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should work with valid input 1`] = `
"{
  \\"start\\": 0,
  \\"end\\": 21,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 21,
    \\"parentScope\\": null,
    \\"file\\": \\"File_0\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_0\\",
  \\"segments\\": {
    \\"VariableDeclarator_1\\": {
      \\"uses\\": [],
      \\"start\\": 7,
      \\"end\\": 20,
      \\"id\\": \\"VariableDeclarator_1\\"
    }
  },
  \\"exposes\\": {},
  \\"pointers\\": {
    \\"testValue\\": \\"VariableDeclarator_1\\"
  }
}"
`;

exports[`regana #analyse analyse should work with valid input 2`] = `
"{
  \\"start\\": 0,
  \\"end\\": 32,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 32,
    \\"parentScope\\": null,
    \\"file\\": \\"File_2\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_2\\",
  \\"segments\\": {
    \\"VariableDeclarator_3\\": {
      \\"uses\\": [],
      \\"start\\": 6,
      \\"end\\": 14,
      \\"id\\": \\"VariableDeclarator_3\\"
    },
    \\"ExportNamedDeclaration_4\\": {
      \\"uses\\": [
        \\"VariableDeclarator_3\\"
      ],
      \\"start\\": 16,
      \\"end\\": 32,
      \\"id\\": \\"ExportNamedDeclaration_4\\"
    }
  },
  \\"exposes\\": {
    \\"test\\": \\"ExportNamedDeclaration_4\\"
  },
  \\"pointers\\": {
    \\"test\\": \\"VariableDeclarator_3\\"
  }
}"
`;

exports[`regana #analyse analyse should work with variable declarations 1`] = `
"{
  \\"start\\": 0,
  \\"end\\": 14,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 14,
    \\"parentScope\\": null,
    \\"file\\": \\"File_5\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_5\\",
  \\"segments\\": {
    \\"VariableDeclarator_6\\": {
      \\"uses\\": [],
      \\"start\\": 5,
      \\"end\\": 13,
      \\"id\\": \\"VariableDeclarator_6\\"
    }
  },
  \\"exposes\\": {},
  \\"pointers\\": {
    \\"test\\": \\"VariableDeclarator_6\\"
  }
}"
`;

exports[`regana #analyse analyse should work with variable declarations 2`] = `
"{
  \\"start\\": 0,
  \\"end\\": 14,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 14,
    \\"parentScope\\": null,
    \\"file\\": \\"File_7\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_7\\",
  \\"segments\\": {
    \\"VariableDeclarator_8\\": {
      \\"uses\\": [],
      \\"start\\": 5,
      \\"end\\": 13,
      \\"id\\": \\"VariableDeclarator_8\\"
    }
  },
  \\"exposes\\": {},
  \\"pointers\\": {
    \\"test\\": \\"VariableDeclarator_8\\"
  }
}"
`;

exports[`regana #analyse analyse should work with variable declarations 3`] = `
"{
  \\"start\\": 0,
  \\"end\\": 16,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 16,
    \\"parentScope\\": null,
    \\"file\\": \\"File_9\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_9\\",
  \\"segments\\": {
    \\"VariableDeclarator_10\\": {
      \\"uses\\": [],
      \\"start\\": 7,
      \\"end\\": 15,
      \\"id\\": \\"VariableDeclarator_10\\"
    }
  },
  \\"exposes\\": {},
  \\"pointers\\": {
    \\"test\\": \\"VariableDeclarator_10\\"
  }
}"
`;

exports[`regana #analyse analyse should work with variable declarations 4`] = `
"{
  \\"start\\": 0,
  \\"end\\": 29,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 29,
    \\"parentScope\\": null,
    \\"file\\": \\"File_11\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_11\\",
  \\"segments\\": {
    \\"VariableDeclarator_12\\": {
      \\"uses\\": [],
      \\"start\\": 7,
      \\"end\\": 15,
      \\"id\\": \\"VariableDeclarator_12\\"
    },
    \\"VariableDeclarator_13\\": {
      \\"uses\\": [],
      \\"start\\": 17,
      \\"end\\": 28,
      \\"id\\": \\"VariableDeclarator_13\\"
    }
  },
  \\"exposes\\": {},
  \\"pointers\\": {
    \\"test\\": \\"VariableDeclarator_12\\",
    \\"another\\": \\"VariableDeclarator_13\\"
  }
}"
`;
